@@ -6,7 +6,6 @@
     </description>
 	
 	<property environment="env"/>
-	<property file="upload.properties"/>
 	
 	<property name="target.base" location="target"/>
 	
@@ -18,22 +17,18 @@
 	
 	<import file="${build.root}/global/lib.xml"/>
 
-	<property name="jobSuffix" value="release"/>
-
-	<condition property="skip.download">
-		<equals arg1="${noDownload}" arg2="true"/>
-	</condition>
-	<condition property="skip.repo">
-		<equals arg1="${noRepo}" arg2="true"/>
-	</condition>
-	
-	<echo message="Skip Download: ${skip.download}"/>
-	<echo message="Skip Repostories: ${skip.repo}"/>
+	<!-- 
+	  - The jobSuffix is also used in "gatherSetup.platform"
+	  - for generating the files to delete. If the jobSuffix changes
+	  - to something else then "1.0.*" then "gatherSetup.platform" has
+	  - to be changed as well.
+	  -->
+	<property name="jobSuffix" value="1.0"/>
 	
     <!-- ================================= 
           target: default              
          ================================= -->
-    <target name="default" depends="gather,upload">
+    <target name="default" depends="gather">
     </target>
 	
 	<!-- ================================= 
@@ -46,9 +41,11 @@
 	<!-- ================================= 
           target: gather              
          ================================= -->
-    <target name="gather" depends="clean,compositeRepository">
+    <target name="gather" depends="clean">
     	<mkdir dir="gather"/>
 
+    	<gatherUpload name="builder.upload" artifact="builder.global" version="${deploy.version}" job="org.openscada.builder-${jobSuffix}" />
+    	
     	<gatherRepo name="external" repository="org.openscada.external.sdk" version="${external.version}" job="org.openscada.external-${jobSuffix}"/>
     	<gatherRepo name="atlantis" repository="org.openscada.atlantis.sdk" version="${atlantis.version}" job="org.openscada.atlantis-${jobSuffix}"/>
     	<gatherRepo name="aurora" repository="org.openscada.aurora.sdk" version="${aurora.version}" job="org.openscada.aurora-${jobSuffix}"/>
@@ -58,9 +55,13 @@
     	<gatherRepo name="dakara" repository="org.openscada.dakara.sdk" version="${dakara.version}" job="org.openscada.dakara-${jobSuffix}"/>
 		<gatherRepo name="deploy" repository="org.openscada.deploy.repo" version="${deploy.version}" job="org.openscada.deploy-${jobSuffix}"/>
     	<gatherRepo name="tauri" repository="org.openscada.tauri" version="${tauri.version}" job="org.openscada.tauri-${jobSuffix}"/>
+    	<gatherRepo name="orion" repository="org.openscada.orion.sdk" version="${orion.version}" job="org.openscada.orion-${jobSuffix}"/>
+    	<gatherRepo name="infinity" repository="org.openscada.infinity.sdk" version="${infinity.version}" job="org.openscada.infinity-${jobSuffix}"/>
+    	<gatherRepo name="jinterop" repository="org.openscada.jinterop.sdk" version="${jinterop.version}" job="org.openscada.jinterop-${jobSuffix}"/>
     	
     	<gatherProduct name="ostc" version="${othala.version}" job="org.openscada.othala-${jobSuffix}"/>
     	<gatherProduct name="osvi" version="${dakara.version}" job="org.openscada.dakara.product-${jobSuffix}"/>
+    	<gatherProduct name="daserver" version="${deploy.version}" job="org.openscada.deploy-${jobSuffix}"/>
     	
     	<gatherSetup name="ostc" job="setup.ostc-${jobSuffix}" description="openSCADA Administration Client" regKey="HKLM\Software\TH4 SYSTEMS GmbH\openSCADA Administration Client" autoClose="[APPDIR]ostc.exe"/>
     	<gatherSetup name="osvi" job="setup.osvi-${jobSuffix}" description="openSCADA Visual Interface" regKey="HKLM\Software\TH4 SYSTEMS GmbH\openSCADA Visual Interface" autoClose="[APPDIR]osvi.exe"/>
@@ -151,8 +152,23 @@
 
         <sequential>
 
-        	<gatherSetup.platform name="@{name}" job="@{job}" buildType="@{buildType}" platform="win32.win32.x86" description="@{description}" regKey="@{regKey}" autoClose="@{autoClose}"/>
-        	<gatherSetup.platform name="@{name}" job="@{job}" buildType="@{buildType}" platform="win32.win32.x86_64" description="@{description}" regKey="@{regKey}" autoClose="@{autoClose}"/>
+        	<echo message="Checking flag: ${gather.@{name}} (full: ${gather.full})"/>
+        	
+        	<if>
+        	
+        		<or>
+					<istrue value="${gather.full}"/>
+	    			<istrue value="${gather.@{name}}"/>
+    			</or>
+        		
+        		<then>
+        		
+		        	<gatherSetup.platform name="@{name}" job="@{job}" buildType="@{buildType}" platform="win32.win32.x86" description="@{description}" regKey="@{regKey}" autoClose="@{autoClose}"/>
+		        	<gatherSetup.platform name="@{name}" job="@{job}" buildType="@{buildType}" platform="win32.win32.x86_64" description="@{description}" regKey="@{regKey}" autoClose="@{autoClose}"/>
+        	
+        		</then>
+        			
+        	</if>
         	
         </sequential>
     </macrodef>
@@ -170,18 +186,40 @@
     	<attribute name="autoClose" default=""/>
 
         <sequential>
-        	<mkdir dir="${target.base}/download/installer/@{name}/@{buildType}"/>
-        	        	
-        	<local name="version"/>
-        	<property url="${env.JENKINS_URL}/job/@{job}/lastSuccessfulBuild/artifact/output/version.properties"/>
-        	<echo message="Version: ${version}"/>
         	
-        	<get
-        		dest="${target.base}/download/installer/@{name}/@{buildType}"
-        		src="${env.JENKINS_URL}/job/@{job}/lastSuccessfulBuild/artifact/output/@{name}_${version}_@{platform}.msi"
-        		usetimestamp="true"/>
-          
-        	<generateUpdate name="@{name}" job="@{job}" platform="@{platform}" description="@{description}" regKey="@{regKey}" autoClose="@{autoClose}"/>
+        	<echo message="Checking flag: ${gather.@{name}} (full: ${gather.full})"/>
+        	
+        	<if>
+        	
+        		<or>
+        			<istrue value="${gather.full}"/>
+	    			<istrue value="${gather.@{name}}"/>
+        		</or>
+        		
+        		<then>
+        		
+		        	<mkdir dir="${target.base}/download/installer/@{name}/@{buildType}"/>
+		        	        	
+		        	<local name="version"/>
+		        	<property url="${env.JENKINS_URL}/job/@{job}/lastSuccessfulBuild/artifact/output/version.properties"/>
+		        	<echo message="Version: ${version}"/>
+		        	
+		        	<delete>
+		        		<fileset dir="${target.base}/download/installer/@{name}/@{buildType}">
+		        			<include name="@{name}_${jobSuffix}.*_@{platform}.msi"/>
+		        		</fileset>
+		        	</delete>
+		        	
+		        	<get
+		        		dest="${target.base}/download/installer/@{name}/@{buildType}"
+		        		src="${env.JENKINS_URL}/job/@{job}/lastSuccessfulBuild/artifact/output/@{name}_${version}_@{platform}.msi"
+		        		usetimestamp="true"/>
+		          
+		        	<generateUpdate name="@{name}" job="@{job}" platform="@{platform}" description="@{description}" regKey="@{regKey}" autoClose="@{autoClose}"/>
+        			
+        		</then>
+        		
+        	</if>
         	
         </sequential>
     </macrodef>
@@ -197,19 +235,35 @@
     	<attribute name="version"/>
     	<attribute name="buildType" default="${buildType}"/>
         <sequential>
-        	<!-- create download dir -->
-        	        	
-        	<delete dir="${target.base}/download/@{name}/@{buildType}/@{version}" failonerror="false"/>
-        	<mkdir dir="${target.base}/download/@{name}/@{buildType}/@{version}"/>
         	
-        	<!-- copy to download -->
+        	<echo message="Checking flag: ${gather.@{name}} (full: ${gather.full})"/>
         	
-        	<foreach list="${configs}" delimiter="&amp;" param="config" trim="true" target="targetGatherProduct">
-        		<param name="job" value="@{job}"/>
-        		<param name="name" value="@{name}"/>
-        		<param name="version" value="@{version}"/>
-        		<param name="buildType" value="@{buildType}"/>
-        	</foreach>
+        	<if>
+        		
+        		<or>
+    				<istrue value="${gather.full}"/>
+        			<istrue value="${gather.@{name}}"/>	
+        		</or>
+        	
+        		<then>
+        		
+		        	<!-- create download dir -->
+		        	        	
+		        	<delete dir="${target.base}/download/@{name}/@{buildType}/@{version}" failonerror="false"/>
+		        	<mkdir dir="${target.base}/download/@{name}/@{buildType}/@{version}"/>
+		        	
+		        	<!-- copy to download -->
+		        	
+		        	<foreach list="${configs}" delimiter="&amp;" param="config" trim="true" target="targetGatherProduct">
+		        		<param name="job" value="@{job}"/>
+		        		<param name="name" value="@{name}"/>
+		        		<param name="version" value="@{version}"/>
+		        		<param name="buildType" value="@{buildType}"/>
+		        	</foreach>
+        		
+        		</then>
+        			
+    		</if>
         	
         </sequential>
     </macrodef>
@@ -238,87 +292,62 @@
     	<attribute name="buildType" default="${buildType}"/>
         <sequential>
         	
+        	<echo message="Checking flag: ${gather.@{name}} (full: ${gather.full})"/>
+        	
+        	<if>
+        		
+        		<or>
+    				<istrue value="${gather.full}"/>
+        			<istrue value="${gather.@{name}}"/>
+        		</or>
+        		
+        		<then>
+        	
+		        	<!-- create download dir -->
+		        	
+		        	<delete dir="${target.base}/download/@{name}/@{buildType}/@{version}" failonerror="false"/>
+		        	<mkdir dir="${target.base}/download/@{name}/@{buildType}/@{version}"/>
+		        	
+		        	<!-- copy to download -->
+		        	
+		        	<get dest="${target.base}/download/@{name}/@{buildType}/@{version}" src="${env.JENKINS_URL}/job/@{job}/lastSuccessfulBuild/artifact/output/@{repository}-@{version}-p2repo.zip" usetimestamp="true"/>
+		        	<get dest="${target.base}/download/@{name}/@{buildType}/@{version}" src="${env.JENKINS_URL}/job/@{job}/lastSuccessfulBuild/artifact/output/@{repository}-@{buildType}.@{version}.zip" usetimestamp="true"/>
+		
+		        	<!-- create repo dir -->
+		        	
+		        	<delete dir="${target.base}/repo/p2/@{name}/@{buildType}/@{version}" failonerror="false"/>
+		        	<mkdir dir="${target.base}/repo/p2/@{name}/@{buildType}/@{version}"/>
+		
+		        	<!-- unzip repo -->
+		        	
+		        	<unzip dest="${target.base}/repo/p2/@{name}/@{buildType}/@{version}" src="${target.base}/download/@{name}/@{buildType}/@{version}/@{repository}-@{version}-p2repo.zip"/>
+        			
+    			</then>
+        		
+        	</if>
+        	
+        </sequential>
+    </macrodef>
+
+	<!-- = = = = = = = = = = = = = = = = =
+          macrodef: gatherUpload          
+         = = = = = = = = = = = = = = = = = -->
+    <macrodef name="gatherUpload">
+        <attribute name="name"/>
+    	<attribute name="artifact"/>
+    	<attribute name="job"/>
+    	<attribute name="version"/>
+    	<attribute name="buildType" default="${buildType}"/>
+        <sequential>
+        	
         	<!-- create download dir -->
         	
         	<delete dir="${target.base}/download/@{name}/@{buildType}/@{version}" failonerror="false"/>
         	<mkdir dir="${target.base}/download/@{name}/@{buildType}/@{version}"/>
         	
         	<!-- copy to download -->
-        	
-        	<get dest="${target.base}/download/@{name}/@{buildType}/@{version}" src="${env.JENKINS_URL}/job/@{job}/lastSuccessfulBuild/artifact/output/@{repository}-@{version}-p2repo.zip" usetimestamp="true"/>
-        	<get dest="${target.base}/download/@{name}/@{buildType}/@{version}" src="${env.JENKINS_URL}/job/@{job}/lastSuccessfulBuild/artifact/output/@{repository}-@{buildType}.@{version}.zip" usetimestamp="true"/>
-
-        	<!-- create repo dir -->
-        	
-        	<delete dir="${target.base}/repo/p2/@{name}/@{buildType}/@{version}" failonerror="false"/>
-        	<mkdir dir="${target.base}/repo/p2/@{name}/@{buildType}/@{version}"/>
-
-        	<!-- unzip repo -->
-        	
-        	<unzip dest="${target.base}/repo/p2/@{name}/@{buildType}/@{version}" src="${target.base}/download/@{name}/@{buildType}/@{version}/@{repository}-@{version}-p2repo.zip"/>
-        	
+        	<get dest="${target.base}/download/@{name}/@{buildType}/@{version}" src="${env.JENKINS_URL}/job/@{job}/lastSuccessfulBuild/artifact/output/@{artifact}-@{version}.zip" usetimestamp="true"/>
         </sequential>
     </macrodef>
-
-	
-	<!-- ================================= 
-          target: upload              
-         ================================= -->
-    <target name="upload" depends="upload.repo,upload.download">
-    </target>
-	
-	<!-- ================================= 
-          target: upload.repo              
-         ================================= -->
-    <target name="upload.repo" depends="clean" unless="skip.repo">
-    	<exec executable="rsync">
-    		<arg value="-avz"/>
-    		<arg value="--delete"/>
-    		<arg value="--exclude-from"/>
-    		<arg value="exclude.repo.list"/>
-    		<arg value="${target.base}/repo/"/>
-    		<arg value="${env.PUBLISH_TARGET}/repo/"/>
-    	</exec>
-    </target>
-	
-	<!-- ================================= 
-          target: upload.download              
-         ================================= -->
-    <target name="upload.download" depends="clean" unless="skip.download">
-       	<exec executable="rsync">
-    		<arg value="-avz"/>
-    		<arg value="--delete"/>
-       		<arg value="--exclude-from"/>
-    		<arg value="exclude.download.list"/>
-    		<arg value="${target.base}/download/"/>
-    		<arg value="${env.PUBLISH_TARGET}/download/"/>
-    	</exec>
-    </target>
-
-	
-    <!-- ================================= 
-          target: compositeRepository              
-         ================================= -->
-    <target name="compositeRepository" depends="clean">
-    	
-    	<delete dir="${target.base}/repo/p2/org.openscada/${buildType}/${atlantis.version}" failonerror="false"/>
-    	<mkdir dir="${target.base}/repo/p2/org.openscada/${buildType}/${atlantis.version}"/>
-    	
-    	<java jar="${startup}" failonerror="true" maxmemory="1024m" fork="true">
-    		<jvmarg value="-XX:MaxPermSize=256m"/>
-    		
-			<arg value="-application" />
-		    <arg value="org.eclipse.ant.core.antRunner" />
-    		
-    		<arg value="-buildfile" />
-	   		<arg value="eclipseBuild.xml" />
-    		<arg value="-Doutput.dir=${target.base}/repo/p2/org.openscada/${buildType}/${atlantis.version}"/>
-    		
-        	<syspropertyset>
-        		<propertyref builtin="all"/>
-        	</syspropertyset>
-		</java>
-    	
-    </target>
 
 </project>
